--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
 
 #box {
     background-color: white;
-    width: 50%;
+    width: 30%;
     text-align: center;
     margin: auto;
+    padding: .5%;
+    box-shadow: 10px 10px 5px black;
 }
